@@ -1,5 +1,6 @@
 package me.schlaubi.kaesk.api;
 
+import java.util.Collections;
 import java.util.List;
 import org.jetbrains.annotations.NotNull;
 
@@ -17,7 +18,7 @@ public interface ArgumentDeserializer<T> {
    * @param clazz the {@link Class} of the parameter type
    * @return whether the input is valid or not
    */
-  boolean isValid(@NotNull String input,@NotNull Class<?> clazz);
+  boolean isValid(@NotNull final String input, @NotNull final Class<?> clazz);
 
   /**
    * Converts the input the the given type. Only gets called when {@link #isValid(String, Class)}
@@ -28,7 +29,7 @@ public interface ArgumentDeserializer<T> {
    * @return the converted input
    */
   @NotNull
-  T deserialize(@NotNull String input, @NotNull Class<?> clazz);
+  T deserialize(@NotNull final String input, @NotNull final Class<?> clazz);
 
   /**
    * Returns whether this deserializer supports var-args.
@@ -45,7 +46,7 @@ public interface ArgumentDeserializer<T> {
    * @return the deserialized vararg
    * @implNote this is only being called when {@link #supportsVararg()} returned true
    */
-  boolean varargIsValid(String[] args, Class<?> clazz);
+  boolean varargIsValid(final @NotNull String[] args, final @NotNull Class<?> clazz);
 
   /**
    * Deserializes a vararg.
@@ -57,19 +58,21 @@ public interface ArgumentDeserializer<T> {
    * #varargIsValid(String[], Class)} returned true
    */
   @NotNull
-  T[] deserializeVararg(@NotNull String[] args, @NotNull Class<?> clazz);
+  T[] deserializeVararg(@NotNull final String[] args, @NotNull final Class<?> clazz);
 
   /**
    * Provides possibilities for tab complete
+   *
    * @param parameterName the name of the parameter to provide possibilities for
    * @param isVarArg whether the parameter is a vararg or not
    * @param clazz the {@link Class} of the parameter
    * @return a list of possible arguments
    */
   @NotNull
-  default List<String> providePossibilities(@NotNull String parameterName, boolean isVarArg,
+  default List<String> providePossibilities(@NotNull final String parameterName,
+      final boolean isVarArg,
       Class<?> clazz) {
-    return List.of("<%s%s>"
-        .formatted(parameterName, isVarArg ? "..." : ""));
+    return Collections.unmodifiableList(
+        Collections.singletonList(String.format("<%s%s>", parameterName, isVarArg ? "..." : "")));
   }
 }
